[package]
name = "async-rustls-stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustls = "0.20.6"
futures-lite = "1.12.0"

[dev-dependencies]
blocking = "1.2.0"
async-io = "1.9.0"
async-executor = "1.4.1"
rustls-pemfile = "1.0.1"
webpki-roots = "0.22.5"
