[package]
name = "async-rustls-stream"
version = "0.1.0"
edition = "2021"
description = "An async tls stream library based on rustls and futures-io. Both for server/client."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustls = "0.20.6"
futures-io = "0.3.24"

[dev-dependencies]
blocking = "1.2.0"
async-io = "1.9.0"
async-executor = "1.4.1"
rustls-pemfile = "1.0.1"
webpki-roots = "0.22.5"
futures-lite = "1.12.0"
async-net = "1.7.0"
